[package]
name = "rsurn"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rsurn"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
fxhash = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
