[tool.poetry]
name = "rsurn"
version = "0.1.0"
description = ""
authors = ["SUDA Mikihiro <s@sudame.net>"]
readme = "README.md"
packages = [{ include = "rsurn" }]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rsurn"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
