[tool.poetry]
name = "rsurn"
version = "0.2.2"
description = ""
authors = ["SUDA Mikihiro <s@sudame.net>"]
readme = "README.md"
packages = [{ include = "rsurn" }]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rsurn"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
